# btdb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  DartConfiguration.tcl  README.md  TODO.txt  btdb  foo.h  run_perf.sh  start.sh
apps/: CMakeLists.txt  btdb.c  parse_sql.c
cmake/: CMakeLists.txt
libs/: CMakeLists.txt
libs/unity/: unityConfig.cmake
src/: CMakeLists.txt  analyzer.c  analyzer.cpp  analyzer.h  catalog.cpp  catalog.h  collections.h  driver.c  driver.h  foo.h  main.c  main.cpp  main.rs  node.c  node.cpp  node.h  node.hpp  panda_db.rs  parser.y  plan.c  plan.h  scanner.l  storage.c  storage.cpp  storage.h  types.c  types.cpp  types.h  utils.c  utils.cpp  utils.h
src/btdb/: lib.rs  storage.rs
src/sql/: CMakeLists.txt  context.hh  context.hpp  driver.c  driver.h  main.c  main.cpp  node.cpp  node.hpp  parser.c  parser.cpp  parser.h  parser.hpp  parser.y  parser2.c  parser2.h  scanner.c  scanner.cpp  scanner.l  scanner2.c  scanner2.l  stack.hh  visitor.hpp
test/: CMakeLists.txt  btdb_test.py  test_collections.c  test_unity.c
test/e2e/: btdb_test.py
tests/: test_panda_db.rs
tests/integration/: integration.rs  test_panda_db.rs
tests/perf/: perf.rs  test_read_speed.rs
