[package]
name = "btdb"
version = "0.1.0"
authors = ["Ryan Beatty <rvbeatty@email.wm.edu>"]
edition = "2018"

[lib]
name = "panda_db"
path = "src/panda_db.rs"

[[test]]
name = "integration"
path = "tests/integration/integration.rs"

[[test]]
name = "perf"
path = "tests/perf/perf.rs"

[dependencies]
csv = "1"
rand = "0.6.5"
quick-error = "1.2.2"
