[package]
name = "btdb"
version = "0.1.0"
authors = ["Ryan Beatty <rvbeatty@email.wm.edu>"]
edition = "2018"

[lib]
name = "btdb"
path = "src/btdb/lib.rs"

[[test]]
name = "integration"
path = "tests/integration/integration.rs"

[[test]]
name = "perf"
path = "tests/perf/perf.rs"

[dependencies]
bincode = "1.1.2"
csv = "1"
prettytable-rs = "^0.8"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
sqlparser = "0.2.4"
quick-error = "1.2.2"
